<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:layout_margin="18dp"
    tools:context="hcmute.edu.vn.mssv18110299.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="27sp"
                android:textAlignment="viewEnd"
                android:fontFamily="@font/fredokaone_regular"

                android:text="Welcome to " />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="27sp"
                android:textColor="@color/text_primary_color"
                android:fontFamily="@font/fredokaone_regular"
                android:text="Mini Market" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="Email"

            app:boxBackgroundColor="@color/input_background_color"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:startIconContentDescription="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconMode="password_toggle"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:hint="Password"
            app:boxBackgroundColor="@color/input_background_color"
            app:startIconContentDescription="Email">
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:layout_height="74dp" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="end"
        android:elevation="1dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/fgpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:onClick="Forgot_Button_OnClick"
            android:clickable="true"
            android:textColor="@color/text_primary_color"
            android:fontFamily="@font/fredokaone_regular"
            android:text="@string/forgot_password" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/sign_in"
            android:fontFamily="@font/fredokaone_regular"
            android:textAllCaps="false"
            android:elevation="5dp"
            app:cornerRadius="8dp">

        </com.google.android.material.button.MaterialButton>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center|bottom"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:fontFamily="@font/fredokaone_regular"
            android:text="@string/or_sign_in_with" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">



            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                 />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="11dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                app:srcCompat="@drawable/ic_facebook" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="11dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fredokaone_regular"
                android:textColor="#5B79B7"
                android:text="@string/facebook" />

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="11dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                app:srcCompat="@drawable/ic_google" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="11dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fredokaone_regular"
                android:textColor="#CC6969"
                android:text="@string/google" />

        </FrameLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="0.5"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fredokaone_regular"
            android:text="@string/don_t_have_an_account" />
        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:onClick="SignUp_Button_OnClick"
            android:fontFamily="@font/fredokaone_regular"
            android:text="@string/sign_up"
            android:textColor="@color/text_primary_color" />

    </LinearLayout>


</LinearLayout>